--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -9,16 +9,23 @@
       </button>
       <a href="/" class="navbar-brand">cosmil</a>
     </div>
-    <div uib-collapse="nav.isCollapsed" class="navbar-collapse collapse" id="navbar-main">
+    <div uib-collapse="nav.isCollapsed" class="navbar-collapse collapse" id="navbar-main" ng-if="nav.logeado">
       <ul class="nav navbar-nav">
         <li ng-repeat="item in nav.menu" ui-sref-active="active">
             <a ui-sref="{{item.state}}">{{item.title}}</a>
         </li>
-        <li>
-          <a ui-sref="login">Login</a>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{nav.usuario.username}} <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">
+              <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+              Perfil</a></li>
+            <li><a href="#" ng-click="nav.salir()">
+              <span class=" glyphicon glyphicon-share" aria-hidden="true"></span>
+              Salir</a></li>
+          </ul>
         </li>
       </ul>
-
     </div>
   </div>
 </div>
