--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -12,12 +12,12 @@
     <div uib-collapse="nav.isCollapsed" class="navbar-collapse collapse" id="navbar-main" ng-if="nav.logeado">
       <ul class="nav navbar-nav">
         <li ng-repeat="item in nav.menu" ui-sref-active="active">
-            <a ui-sref="{{item.state}}">{{item.title}}</a>
+            <a ui-sref="{{item.state}}" ng-if="item.permitido">{{item.title}}</a>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{nav.usuario.username}} <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">
+            <li><a href="#" ng-click="nav.verPerfil()">
               <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
               Perfil</a></li>
             <li><a href="#" ng-click="nav.salir()">
