--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -39,13 +39,16 @@
             <a ui-sref="reserva">Reservar</a>
         </li>
         <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'ADMIN'">
-            <a ui-sref="reporte">Reportes</a>
+            <a ui-sref="todas-reservas">Reportes</a>
         </li>
         <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'ASEGURADO'">
             <a ui-sref="mis-reservas">Mis reservas</a>
         </li>
-        <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'RECEPCIONISTA' ||globals.currentUser.rol == 'BIOESTADISTICO' ">
-            <a ui-sref="lista-reservas">Lista reservas</a>
+        <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'RECEPCIONISTA'">
+            <a ui-sref="lista-reservas">Lista de reservas</a>
+        </li>
+        <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'BIOESTADISTICO' ">
+            <a ui-sref="todas-reservas">Lista de reservas</a>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{globals.currentUser.username}} <span class="caret"></span></a>
