--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -24,12 +24,6 @@
             <a ui-sref="medico">Medicos</a>
         </li>
         <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'ADMIN'">
-            <a ui-sref="emergencia">Emergencias</a>
-        </li>
-        <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'ADMIN'">
-            <a ui-sref="observacion">Observaciones</a>
-        </li>
-        <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'ADMIN'">
             <a ui-sref="horario">Horarios</a>
         </li>
         <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'ADMIN'">
@@ -38,17 +32,23 @@
         <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'ASEGURADO' ||globals.currentUser.rol == 'RECEPCIONISTA' ">
             <a ui-sref="reserva">Reservar</a>
         </li>
-        <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'ADMIN'">
-            <a ui-sref="todas-reservas">Reportes</a>
-        </li>
         <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'ASEGURADO'">
             <a ui-sref="mis-reservas">Mis reservas</a>
+        </li>
+        <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'ADMIN'||globals.currentUser.rol == 'ASEGURADO' ||globals.currentUser.rol == 'RECEPCIONISTA'">
+            <a ui-sref="emergencia">Emergencias</a>
+        </li>
+        <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'ADMIN' || globals.currentUser.rol == 'ASEGURADO' ||globals.currentUser.rol == 'RECEPCIONISTA'">
+            <a ui-sref="observacion">Informaciones</a>
         </li>
         <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'RECEPCIONISTA'">
             <a ui-sref="lista-reservas">Lista de reservas</a>
         </li>
         <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'BIOESTADISTICO' ">
             <a ui-sref="todas-reservas">Lista de reservas</a>
+        </li>
+        <li ui-sref-active="active" ng-if="globals.currentUser.rol == 'ADMIN'">
+            <a ui-sref="todas-reservas">Reportes</a>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{globals.currentUser.username}} <span class="caret"></span></a>
