--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1,4 +1,10 @@
 
+.well-lg-a {
+    height: 150px;
+    padding: 24px;
+    border-radius: 6px;
+}
+
 /**
  * Bootstrap Fonts
  */
@@ -37,4 +43,3 @@
   color: #000;
   padding: 0.2em 0;
 }
-
